samples/_failures_safe/1761206092_44b170_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7970e5b9.c: In function ‘main’:
./samples/SAFE/__tmp_7970e5b9.c:141:13: error: expected declaration or statement at end of input
  141 |             event = EVENT_INVALID;
      |             ^~~~~
./samples/SAFE/__tmp_7970e5b9.c:141:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7970e5b9.c:141:13: error: expected declaration or statement at end of input
